--- a/configs/experiment_config.yaml
+++ b/configs/experiment_config.yaml
@@ -54,3 +54,15 @@ evaluation:
   random_state: 42
   confidence_interval: 0.95
   bootstrap_samples: 1000
+
+neural:
+  lstm:
+    embedding_dim: 200
+    hidden_size: 128
+    bidirectional: true
+    dropout: 0.3
+    num_layers: 1
+    learning_rate: 0.001
+    batch_size: 32
+    epochs: 10
+    max_length: 128
