docs: improve README and add publication scripts
- Add detailed folder structure with example filenames

- Add single-run examples with expected output paths

- Add section for reproducing article tables and figures

- Create scripts/make_tables.py for generating publication tables

- Create scripts/make_figures.py for generating publication figures

- Improve user onboarding experience

--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,28 @@ pd.py
 test_lstm.py
 test_lstm_fixed.py
 __pycache__/
+
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Conda
+.env
+.conda/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Data (не коммитить датасеты)
+data/
+!data/README.md  # только README можно коммитить
+
+# Results (можно коммитить только финальные)
+results/
+!results/figures/
+!results/tables/
+!results/*.csv
