--- a/configs/experiment_config.yaml
+++ b/configs/experiment_config.yaml
@@ -30,7 +30,7 @@ data:
         use_original_splits: true
         
     taiga_social:
-      path: "data/taiga/social_dataset.csv"
+      path: "data/taiga_extracted/home/tsha/social"
       text_column: "text"
       label_column: "label"
       split:
@@ -50,9 +50,9 @@ models:
   classical:
     bow_logreg:
       vectorizer:
-        ngram_range: [1, 2]
-        max_features: 10000
-        min_df: 5
+        ngram_range: [1, 1]
+        max_features: 1000
+        min_df: 1
       classifier:
         solver: "lbfgs"
         max_iter: 1000
@@ -60,10 +60,11 @@ models:
         
     tfidf_svm:
       vectorizer:
-        ngram_range: [1, 2]
-        max_features: 20000
-        min_df: 3
+        ngram_range: [1, 1]
+        max_features: 1000
+        min_df: 1
         norm: "l2"
+        sublinear_tf: true
       classifier:
         C: 1.0
         kernel: "linear"
