--- a/configs/environment.yml
+++ b/configs/environment.yml
@@ -4,7 +4,7 @@ channels:
   - pytorch
   - defaults
 dependencies:
-  - python=3.10
+  - python=3.10.2  
   - pip=23.1.2
   - numpy=1.24.3
   - pandas=2.0.3
@@ -15,6 +15,10 @@ dependencies:
   - jupyter=1.0.0
   - tqdm=4.65.0
   - pyyaml=6.0.1
+  - ipython=8.12.0  
+  - requests=2.31.0  
+  - pytest=7.4.0  
+  - pytest-cov=4.1.0  
   - pip:
     - torch==2.2.1
     - torchvision==0.17.1
@@ -22,4 +26,3 @@ dependencies:
     - pymorphy2==0.9.1
     - pymorphy2-dicts-ru==2.4.417127.4579844
     - datasets==2.14.5
-    - requests==2.31.0
