--- a/configs/model_logreg.yml
+++ b/configs/model_logreg.yml
@@ -11,41 +11,26 @@ vectorizer:
     ngram_range: [1, 2]           # Униграммы и биграммы
     max_features: 10000           # Максимальный размер словаря
     min_df: 5                     # Минимальная частота термина
-    max_df: 1.0                   # Максимальная частота термина
-    binary: false                 # Бинарные или счетные признаки
-    lowercase: true               # Приведение к нижнему регистру
-    strip_accents: "unicode"      # Удаление акцентов
-    stop_words: null              # Без стоп-слов
+    max_df: 1.0
+    binary: false
+    lowercase: true
+    strip_accents: "unicode"
 
 classifier:
   type: "logistic_regression"
   parameters:
-    solver: "lbfgs"               # Алгоритм оптимизации
-    max_iter: 1000                # Максимум итераций
-    random_state: 42              # Seed для воспроизводимости
-    C: 1.0                        # Параметр регуляризации
-    tol: 1e-4                     # Толерантность для остановки
-    class_weight: "balanced"      # Балансировка классов
-    multi_class: "auto"           # Мультиклассовая классификация
-    warm_start: false             # Теплый старт
+    solver: "lbfgs"               # Алгоритм из статьи
+    max_iter: 1000                # Максимум итераций из статьи
+    random_state: 42
+    C: 1.0
+    tol: 1e-4
+    class_weight: "balanced"
+    multi_class: "auto"
 
-training:
-  scaling: true                   # Масштабирование признаков
-  cross_validation:
-    folds: 5                      # 5-кратная кросс-валидация
-    scoring: "f1_macro"           # Метрика для CV
-
-evaluation:
-  metrics: ["accuracy", "precision_macro", "recall_macro", "f1_macro"]
-  bootstrap_samples: 1000         # Бутстрэп выборки для ДИ
-  confidence_level: 0.95          # Уровень доверия
-
-# Параметры из статьи
+# Параметры из статьи (должны точно совпадать)
 article_parameters:
   solver: "lbfgs"
   max_iter: 1000
   ngram_range: [1, 2]
   max_features: 10000
   min_df: 5
-  test_size: 0.2
-  random_state: 42
