--- a/configs/model_svm.yml
+++ b/configs/model_svm.yml
@@ -11,41 +11,30 @@ vectorizer:
     ngram_range: [1, 2]           # Униграммы и биграммы
     max_features: 20000           # Максимальный размер словаря
     min_df: 3                     # Минимальная частота термина
-    max_df: 1.0                   # Максимальная частота термина
+    max_df: 1.0
     norm: "l2"                    # L2 нормализация
     sublinear_tf: true            # Сублинейное масштабирование TF
     use_idf: true                 # Использование IDF
-    smooth_idf: true              # Сглаживание IDF
-    lowercase: true               # Приведение к нижнему регистру
-    strip_accents: "unicode"      # Удаление акцентов
-    stop_words: null              # Без стоп-слов (обрабатывается в препроцессинге)
+    smooth_idf: true
+    lowercase: true
+    strip_accents: "unicode"
 
 classifier:
   type: "linear_svc"
   parameters:
-    C: 1.0                        # Параметр регуляризации
-    kernel: "linear"              # Линейное ядро
-    max_iter: 1000                # Максимум итераций
-    random_state: 42              # Seed для воспроизводимости
-    tol: 1e-4                     # Толерантность для остановки
-    class_weight: "balanced"      # Балансировка классов
+    C: 1.0                        # Оптимальное значение из статьи
+    kernel: "linear"
+    max_iter: 1000
+    random_state: 42
+    tol: 1e-4
+    class_weight: "balanced"
 
-training:
-  scaling: true                   # Масштабирование признаков
-  cross_validation:
-    folds: 5                      # 5-кратная кросс-валидация
-    scoring: "f1_macro"           # Метрика для CV
-
-evaluation:
-  metrics: ["accuracy", "precision_macro", "recall_macro", "f1_macro"]
-  bootstrap_samples: 1000         # Бутстрэп выборки для ДИ
-  confidence_level: 0.95          # Уровень доверия
-
-# Параметры из статьи
+# Параметры из статьи (должны точно совпадать)
 article_parameters:
   C: 1.0
   ngram_range: [1, 2]
   max_features: 20000
   min_df: 3
-  test_size: 0.2
-  random_state: 42
+  sublinear_tf: true
+  use_idf: true
+  norm: "l2"
