--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,6 @@ ipython==8.12.0
 datasets==2.14.5
 requests==2.31.0
 
-pytest>=7.0.0
-pytest-cov>=4.0.0
+# Тестирование (фиксируем версии вместо >=)
+pytest==7.4.0
+pytest-cov==4.1.0
